--- a/configure.ac
+++ b/configure.ac
@@ -2165,13 +2165,16 @@ NTLIB=
 CM_OBJ="cm.o"
 XARGS_LIMIT=
 if test "${HAVE_W32}" = "yes"; then
-  AC_DEFINE(HAVE_NTGUI, 1, [Define to use native MS Windows GUI.])
+  if test "${with_ns}" != yes && "${with_gtk}" != yes; then
+    AC_DEFINE(HAVE_NTGUI, 1, [Define to use native MS Windows GUI.])
+    W32_OBJ="w32term.o"
+  fi
   if test "$with_toolkit_scroll_bars" = "no"; then
     AC_MSG_ERROR([Non-toolkit scroll bars are not implemented for w32 build.])
   fi
   AC_CHECK_TOOL(WINDRES, [windres],
                 [AC_MSG_ERROR([No resource compiler found.])])
-  W32_OBJ="w32fns.o w32menu.o w32reg.o w32font.o w32term.o"
+  W32_OBJ="$W32_OBJ w32fns.o w32menu.o w32reg.o w32font.o"
   W32_OBJ="$W32_OBJ w32xfns.o w32select.o w32uniscribe.o w32cygwinx.o"
   EMACSRES="emacs.res"
   case "$canonical" in
@@ -2235,7 +2238,7 @@ AC_SUBST(LIB_WSOCK32)
 AC_SUBST(NTLIB)
 AC_SUBST(XARGS_LIMIT)
 
-if test "${HAVE_W32}" = "yes"; then
+if test "${HAVE_NTGUI}" = "yes"; then
   window_system=w32
   with_xft=no
 fi
